<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasicTwitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home</string>
    <string name="tv_username_label">\@foo</string>
    <string name="tv_fullname_label">Full Name</string>
    <string name="tv_body_label">This is the tweet body</string>
    <string name="tv_relativeDate_label">22m</string>
    <string name="iv_profileimage_alt">Profile picture</string>
    <string name="title_activity_compose_tweet">Compose Tweet</string>
    <string name="img_profile_picture">Profile picture</string>
    <string name="btn_tweet_label">Tweet</string>
    <string name="tv_tweetcount_value">140</string>

</resources>